Use :host in combination with ::ng-deep to stop bleed into other components.

--- a/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-button/form-button.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-button/form-button.component.scss
@@ -4,6 +4,6 @@
   color: dc.$omv-color-white;
 }
 
-::ng-deep omv-form-button .mat-form-field-underline {
+:host ::ng-deep omv-form-button .mat-form-field-underline {
   display: none;
 }
