--- a/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-slider/form-slider.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/form/components/form-slider/form-slider.component.scss
@@ -1,4 +1,4 @@
-::ng-deep omv-form-slider .mat-form-field-underline {
+:host ::ng-deep omv-form-slider .mat-form-field-underline {
   display: none;
 }
 
